--- a/package.json
+++ b/package.json
@@ -4,17 +4,31 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
+    "@mui/styled-engine-sc": "^6.1.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "emailjs": "^4.0.0",
     "framer-motion": "^6.3.15",
+    "mobx": "^6.13.5",
+    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
     "number-counter": "^1.0.3",
     "react": "^18.2.0",
+    "react-cookie": "^7.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-onclickoutside": "^6.12.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "styled-components": "^6.1.13",
+    "universal-cookie": "^7.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
